target/generated-sources/antlr4/iakbari/ruletranslator/parsers/POSLParser.java
// Generated from POSL.g4 by ANTLR 4.4

	package iakbari.ruletranslator.parsers;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class POSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PIPE=1, BANG=2, HAT=3, COLON=4, SEMI=5, LBRACK=6, RBRACK=7, LPAREN=8, 
		RPAREN=9, QMARK=10, COMMA=11, PERIOD=12, LBRACE=13, RBRACE=14, USCORE=15, 
		IMP=16, ARROW=17, URI=18, SYMBOL=19, QSYMBOL=20, COMMENT=21, MLCOMMENT=22, 
		WS=23;
	public static final String[] tokenNames = {
		"<INVALID>", "'|'", "'!'", "'^'", "':'", "';'", "'['", "']'", "'('", "')'", 
		"'?'", "','", "'.'", "'{'", "'}'", "'_'", "':-'", "'->'", "URI", "SYMBOL", 
		"QSYMBOL", "COMMENT", "MLCOMMENT", "WS"
	};
	public static final int
		RULE_r = 0, RULE_clause = 1, RULE_atoms = 2, RULE_atom = 3, RULE_ps = 4, 
		RULE_oid = 5, RULE_prest = 6, RULE_srest = 7, RULE_posplex = 8, RULE_slotplex = 9, 
		RULE_pos = 10, RULE_slots = 11, RULE_slot = 12, RULE_term = 13, RULE_cterm = 14, 
		RULE_plex = 15, RULE_ctor = 16, RULE_rel = 17, RULE_role = 18, RULE_type = 19, 
		RULE_ind = 20, RULE_skolem = 21, RULE_var = 22, RULE_symbol = 23, RULE_uri = 24;
	public static final String[] ruleNames = {
		"r", "clause", "atoms", "atom", "ps", "oid", "prest", "srest", "posplex", 
		"slotplex", "pos", "slots", "slot", "term", "cterm", "plex", "ctor", "rel", 
		"role", "type", "ind", "skolem", "var", "symbol", "uri"
	};

	@Override
	public String getGrammarFileName() { return "POSL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public POSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SYMBOL || _la==QSYMBOL) {
				{
				{
				setState(50); clause();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseContext extends ParserRuleContext {
		public TerminalNode PERIOD() { return getToken(POSLParser.PERIOD, 0); }
		public TerminalNode IMP() { return getToken(POSLParser.IMP, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomsContext atoms() {
			return getRuleContext(AtomsContext.class,0);
		}
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); atom();
			setState(59);
			_la = _input.LA(1);
			if (_la==IMP) {
				{
				setState(57); match(IMP);
				setState(58); atoms();
				}
			}

			setState(61); match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomsContext extends ParserRuleContext {
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(POSLParser.COMMA); }
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(POSLParser.COMMA, i);
		}
		public AtomsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atoms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterAtoms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitAtoms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitAtoms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomsContext atoms() throws RecognitionException {
		AtomsContext _localctx = new AtomsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atoms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); atom();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(64); match(COMMA);
				setState(65); atom();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public RelContext rel() {
			return getRuleContext(RelContext.class,0);
		}
		public OidContext oid() {
			return getRuleContext(OidContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(POSLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(POSLParser.RPAREN, 0); }
		public PsContext ps() {
			return getRuleContext(PsContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); rel();
			setState(72); match(LPAREN);
			setState(74);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(73); oid();
				}
				break;
			}
			setState(77);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PIPE) | (1L << BANG) | (1L << LBRACK) | (1L << QMARK) | (1L << USCORE) | (1L << URI) | (1L << SYMBOL) | (1L << QSYMBOL))) != 0)) {
				{
				setState(76); ps();
				}
			}

			setState(79); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PsContext extends ParserRuleContext {
		public PsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ps; }
	 
		public PsContext() { }
		public void copyFrom(PsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Atom_altContext extends PsContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Atom_altContext(PsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterAtom_alt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitAtom_alt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitAtom_alt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Srest_altContext extends PsContext {
		public SrestContext srest() {
			return getRuleContext(SrestContext.class,0);
		}
		public Srest_altContext(PsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterSrest_alt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitSrest_alt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitSrest_alt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Prest_altContext extends PsContext {
		public TerminalNode SEMI() { return getToken(POSLParser.SEMI, 0); }
		public SrestContext srest() {
			return getRuleContext(SrestContext.class,0);
		}
		public SlotsContext slots() {
			return getRuleContext(SlotsContext.class,0);
		}
		public PrestContext prest() {
			return getRuleContext(PrestContext.class,0);
		}
		public Prest_altContext(PsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterPrest_alt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitPrest_alt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitPrest_alt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Pos_altContext extends PsContext {
		public PosContext pos() {
			return getRuleContext(PosContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(POSLParser.SEMI, 0); }
		public SrestContext srest() {
			return getRuleContext(SrestContext.class,0);
		}
		public SlotsContext slots() {
			return getRuleContext(SlotsContext.class,0);
		}
		public PrestContext prest() {
			return getRuleContext(PrestContext.class,0);
		}
		public Pos_altContext(PsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterPos_alt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitPos_alt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitPos_alt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Slots_altContext extends PsContext {
		public SlotsContext slots(int i) {
			return getRuleContext(SlotsContext.class,i);
		}
		public PosContext pos() {
			return getRuleContext(PosContext.class,0);
		}
		public List<TerminalNode> SEMI() { return getTokens(POSLParser.SEMI); }
		public SrestContext srest() {
			return getRuleContext(SrestContext.class,0);
		}
		public TerminalNode SEMI(int i) {
			return getToken(POSLParser.SEMI, i);
		}
		public List<SlotsContext> slots() {
			return getRuleContexts(SlotsContext.class);
		}
		public PrestContext prest() {
			return getRuleContext(PrestContext.class,0);
		}
		public Slots_altContext(PsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterSlots_alt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitSlots_alt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitSlots_alt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PsContext ps() throws RecognitionException {
		PsContext _localctx = new PsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ps);
		int _la;
		try {
			setState(127);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				_localctx = new Pos_altContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81); pos();
				setState(83);
				_la = _input.LA(1);
				if (_la==PIPE) {
					{
					setState(82); prest();
					}
				}

				setState(87);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(85); match(SEMI);
					setState(86); slots();
					}
				}

				setState(90);
				_la = _input.LA(1);
				if (_la==BANG) {
					{
					setState(89); srest();
					}
				}

				}
				break;
			case 2:
				_localctx = new Slots_altContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92); slots();
				setState(115);
				switch (_input.LA(1)) {
				case PIPE:
				case BANG:
				case RBRACK:
				case RPAREN:
					{
					setState(98);
					_la = _input.LA(1);
					if (_la==PIPE) {
						{
						setState(93); prest();
						setState(96);
						_la = _input.LA(1);
						if (_la==SEMI) {
							{
							setState(94); match(SEMI);
							setState(95); slots();
							}
						}

						}
					}

					setState(101);
					_la = _input.LA(1);
					if (_la==BANG) {
						{
						setState(100); srest();
						}
					}

					}
					break;
				case SEMI:
					{
					setState(103); match(SEMI);
					setState(104); pos();
					setState(106);
					_la = _input.LA(1);
					if (_la==PIPE) {
						{
						setState(105); prest();
						}
					}

					setState(110);
					_la = _input.LA(1);
					if (_la==SEMI) {
						{
						setState(108); match(SEMI);
						setState(109); slots();
						}
					}

					setState(113);
					_la = _input.LA(1);
					if (_la==BANG) {
						{
						setState(112); srest();
						}
					}

					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 3:
				_localctx = new Prest_altContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(117); prest();
				setState(120);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(118); match(SEMI);
					setState(119); slots();
					}
				}

				setState(123);
				_la = _input.LA(1);
				if (_la==BANG) {
					{
					setState(122); srest();
					}
				}

				}
				break;
			case 4:
				_localctx = new Srest_altContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(125); srest();
				}
				break;
			case 5:
				_localctx = new Atom_altContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(126); atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OidContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode HAT() { return getToken(POSLParser.HAT, 0); }
		public OidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterOid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitOid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitOid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OidContext oid() throws RecognitionException {
		OidContext _localctx = new OidContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_oid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); term();
			setState(130); match(HAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrestContext extends ParserRuleContext {
		public PosplexContext posplex() {
			return getRuleContext(PosplexContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode PIPE() { return getToken(POSLParser.PIPE, 0); }
		public PrestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterPrest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitPrest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitPrest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrestContext prest() throws RecognitionException {
		PrestContext _localctx = new PrestContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_prest);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(PIPE);
			setState(135);
			switch (_input.LA(1)) {
			case QMARK:
				{
				setState(133); var();
				}
				break;
			case LBRACK:
				{
				setState(134); posplex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SrestContext extends ParserRuleContext {
		public SlotplexContext slotplex() {
			return getRuleContext(SlotplexContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode BANG() { return getToken(POSLParser.BANG, 0); }
		public SrestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_srest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterSrest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitSrest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitSrest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SrestContext srest() throws RecognitionException {
		SrestContext _localctx = new SrestContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_srest);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(BANG);
			setState(140);
			switch (_input.LA(1)) {
			case QMARK:
				{
				setState(138); var();
				}
				break;
			case LBRACK:
				{
				setState(139); slotplex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PosplexContext extends ParserRuleContext {
		public PosContext pos() {
			return getRuleContext(PosContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(POSLParser.RBRACK, 0); }
		public PrestContext prest() {
			return getRuleContext(PrestContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(POSLParser.LBRACK, 0); }
		public PosplexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_posplex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).enterPosplex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof POSLListener ) ((POSLListener)listener).exitPosplex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof POSLVisitor ) return ((POSLVisitor<? extends T>)visitor).visitPosplex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PosplexContext posplex() throws RecognitionException {
		PosplexContext _localctx = new PosplexContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_posplex);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(LBRACK);
			setState(144);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACK) | (1L << QMARK) | (1L << USCORE) | (1L << URI) | (1L << SYMBOL) | (1L << QSYMBOL))) != 0)) {
				{
				setState(143); pos();
				}
			}

			setState(147);
			_la = _input.LA(1);
			if (_la==PIPE) {
				{
				setState(146); prest();
				}
			}

			setState(149); match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SlotplexContext extends ParserRuleContext {
		public SrestContext srest() {
			return getRuleContext(SrestContext.class,0);
		}
		public SlotsContext slots() {
			return getRuleContext(SlotsContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(POSLParser.RBRACK, 0); }
		public TerminalNode LBRACK() { return getToken(POSLParser.LBRACK, 0); }
